[project]
name = "mapping_demo"
version = "0.1.0"
description = "Occupancy Grid mapping"
readme = "README.md"
authors = [
    { name = "Ashrith Sagar", email = "ashrithy@wilp.bits-pilani.ac.in" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"
