[project]
name = "mapping_demo"
version = "0.1.0"
description = "Occupancy Grid mapping"
readme = "README.md"
authors = [
    { name = "Ashrith Sagar", email = "ashrithy@wilp.bits-pilani.ac.in" },
]
requires-python = ">=3.12"
dependencies = ["matplotlib>=3.10.9", "mujoco>=3.9.0", "numpy>=2.4.6"]

[project.scripts]
mapping_node = "occupancy_mapping.mapping_node:main"

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pybind11-stubgen>=2.5.5"]
