<!-- ros2_occupancy_grid_ws/src/occupancy_mapping/package.xml -->

<buildtool_depend>ament_python</buildtool_depend>

<exec_depend>rclpy</exec_depend>
<exec_depend>tf2_ros</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>
<exec_depend>sensor_msgs</exec_depend>

<export>
  <build_type>ament_python</build_type>
</export>
