<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_lab_bringup</name>
  <version>0.1.0</version>
  <description>Top-level bringup: run the CNN visual-SLAM demo, the EKF-SLAM demo, or both side by side.</description>
  <maintainer email="student@example.com">Lab 4 Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cnn_visual_slam</exec_depend>
  <exec_depend>ekf_slam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
